added javadocs and other comments